--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -190,9 +190,9 @@
               <div class="grid">
                 <div class="col-6">
                   <div class="field">
-                    <label>業務</label>
+                    <label>業務員</label>
                     <br>
-                    <label class="mt-2 ml-2">{{(contract_form.controls['updated_by'].value)}}</label>
+                    <label class="mt-2 ml-2">{{(contract_form.controls['salesperson_name'].value)}}</label>
                   </div>
                 </div>
                 <div class="col-6">
