--- a/src/app/views/features/report/report.component.scss
+++ b/src/app/views/features/report/report.component.scss
@@ -1,2 +1,24 @@
 //@import 'src/app/app.component.scss';
 
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink-caret {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.animation {
+  font: bold 200% Consolas, Monaco, monospace;
+  border-right: .1em solid black;
+  width: 8.4rem;
+  margin: 2em 2em;
+  white-space: nowrap;
+  overflow: hidden;
+  -webkit-animation: typing 1s steps(4, end),
+  blink-caret .5s step-end infinite alternate;
+}
