--- a/src/app/views/components/toolbar/toolbar.component.scss
+++ b/src/app/views/components/toolbar/toolbar.component.scss
@@ -221,3 +221,11 @@
   opacity: 1;
   width: 250px;
 }
+
+.fixed-header-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
+}
