--- a/src/app/views/components/dashboard/dashboard.component.html
+++ b/src/app/views/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-content-center mt-5">
+<div class="flex justify-content-center pt-3">
   <div class="col-10">
     <div class="grid">
       <!--左-->
