--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -301,9 +301,7 @@
               <div class="flex justify-content-end">
                 <p-button label="儲存" (click)="patchCampaignRequest(c_id)"
                           styleClass="p-button-outlined p-button-info"></p-button>
-                <p-toast></p-toast>
-                <p-button label="取消" styleClass="p-button-secondary ml-2" (click)="showWarn()"
-                ></p-button>
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
               </div>
             </p-tabPanel>
           </p-tabView>
