--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -3,18 +3,7 @@
     <p-card>
       <h2>商機</h2>
       <div class="flex flex-row justify-content-start">
-        <div class="flex align-items-center mb-3 ml-4">
-          <span class="text-400 pi pi-circle-fill mr-1"></span>
-          <span>{{stage[0].name}}</span>
-          <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
-          <span>{{stage[1].name}}</span>
-          <span class="text-yellow-300 pi pi-circle-fill mr-1 ml-2"></span>
-          <span>{{stage[2].name}}</span>
-          <span class="text-orange-300 pi pi-circle-fill mr-1 ml-2"></span>
-          <span>{{stage[3].name}}</span>
-          <span class="text-green-300 pi pi-circle-fill mr-1 ml-2"></span>
-          <span>{{stage[4].name}}</span>
-        </div>
+
         <div class="flex ml-auto mr-2">
         <span class="p-buttonset">
           <p-button (click)="showDialog('add')" pTooltip="新增商機" tooltipPosition="top" icon="pi pi-plus"
@@ -25,20 +14,42 @@
       <p-table [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
                (onLazyLoad)="loadPostsLazy($event)">
         <ng-template pTemplate="caption">
-          <div class="flex">
+          <div class="flex align-items-center justify-content-start mb-3 ml-2">
+            <span class="text-400 pi pi-circle-fill mr-1"></span>
+            <span>{{stage[0].name}}</span>
+            <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
+            <span>{{stage[1].name}}</span>
+            <span class="text-yellow-300 pi pi-circle-fill mr-1 ml-2"></span>
+            <span>{{stage[2].name}}</span>
+            <span class="text-orange-300 pi pi-circle-fill mr-1 ml-2"></span>
+            <span>{{stage[3].name}}</span>
+            <span class="text-green-300 pi pi-circle-fill mr-1 ml-2"></span>
+            <span>{{stage[4].name}}</span>
+            <div class="flex ml-auto mr-2">
             <span class="p-input-icon-left ml-auto">
               <td><input type="text" [(ngModel)]="filterText" (input)="filtered()" pInputText
                          placeholder="關鍵字搜索"></td>
             </span>
+            </div>
           </div>
         </ng-template>
         <ng-template pTemplate="header">
           <tr>
-            <th pSortableColumn="stage">狀態<p-sortIcon field="stage"></p-sortIcon></th>
-            <th pSortableColumn="name">商機名稱<p-sortIcon field="name"></p-sortIcon></th>
-            <th pSortableColumn="account_name">帳戶<p-sortIcon field="account_name"></p-sortIcon></th>
-            <th pSortableColumn="close_date">結束日期<p-sortIcon field="close_date"></p-sortIcon></th>
-            <th pSortableColumn="created_by">業務員<p-sortIcon field="created_by"></p-sortIcon></th>
+            <th pSortableColumn="stage">狀態
+              <p-sortIcon field="stage"></p-sortIcon>
+            </th>
+            <th pSortableColumn="name">商機名稱
+              <p-sortIcon field="name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="account_name">帳戶
+              <p-sortIcon field="account_name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="close_date">結束日期
+              <p-sortIcon field="close_date"></p-sortIcon>
+            </th>
+            <th pSortableColumn="created_by">業務員
+              <p-sortIcon field="created_by"></p-sortIcon>
+            </th>
             <th></th>
           </tr>
         </ng-template>
@@ -58,12 +69,14 @@
             <td>{{ opportunity.created_by }}</td>
             <td>
               <div class="flex justify-content-end">
-                <p-button icon="pi pi-eye" routerLink="/main/opportunity/view" pTooltip="檢視" tooltipPosition="top"
+                <p-button icon="pi pi-eye" [routerLink]="['/main/opportunity/view/', opportunity.opportunity_id]"
+                          pTooltip="檢視" tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button (click)="showDialog('edit',opportunity)" icon="pi pi-pencil" pTooltip="編輯"
                           tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-                <p-button (click)="deleteOpportunity(opportunity.opportunity_id)" icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
+                <p-button (click)="deleteOpportunity(opportunity.opportunity_id)" icon="pi pi-trash" pTooltip="刪除"
+                          tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               </div>
             </td>
@@ -150,10 +163,12 @@
     </ng-container>
     <div class="flex justify-content-end">
       <ng-container *ngIf="dialogHeader === '編輯商機'">
-        <p-button label="儲存" (click)="patchOpportunity();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="儲存" (click)="patchOpportunity();edit=false"
+                  styleClass="p-button-outlined p-button-info"></p-button>
       </ng-container>
       <ng-container *ngIf="dialogHeader !== '編輯商機'">
-        <p-button label="新增" (click)="postOpportunity();edit=false" styleClass="p-button-outlined p-button-info"></p-button>
+        <p-button label="新增" (click)="postOpportunity();edit=false"
+                  styleClass="p-button-outlined p-button-info"></p-button>
       </ng-container>
       <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
     </div>
