--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -138,7 +138,7 @@
       <ng-container *ngIf="dialogHeader !== '編輯帳戶'">
         <p-button label="新增" (click)="postAccount()" styleClass="p-button-outlined p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
