--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -75,7 +75,7 @@
   </div>
 </div>
 <form [formGroup]="campaign_form">
-  <p-dialog [(visible)]="visible" header={{dialogHeader}} [modal]="true">
+  <p-dialog [(visible)]="edit" header={{dialogHeader}} [modal]="true">
     <div class="grid">
       <div class="col-6">
         <div class="field">
@@ -214,7 +214,7 @@
       <ng-container *ngIf="showedit">
         <p-button label="儲存" (click)="patchCampaignRequest(c_id)"  styleClass="p-button-outlined p-button-info"></p-button>
       </ng-container>
-      <p-button label="取消" (click)="visible=false" styleClass="p-button-secondary ml-1"></p-button>
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
     </div>
   </p-dialog>
 </form>
