--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -166,7 +166,7 @@
             <p-button label="新增" (click)="postContact();edit=false"
                       styleClass="p-button-outlined p-button-info"></p-button>
           </ng-container>
-          <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
+          <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
         </div>
       </div>
     </div>
