fix: 報價 狀態顏色

--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -317,7 +317,7 @@
     <ng-template pTemplate="summary">
       <div class="flex justify-content-end">
         <p-button label="取消" (click)="add=false" styleClass="p-button-secondary"></p-button>
-        <p-button label="下一步" (click)="edit=true" (click)="add=false" styleClass="p-button-info ml-1"></p-button>
+        <p-button label="下一步" (click)="edit=true" styleClass="p-button-info ml-1"></p-button>
       </div>
     </ng-template>
   </p-table>
