fix: 行銷活動 狀態顏色

--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -18,9 +18,9 @@
               <span>{{status[0].name}}</span>
               <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
               <span>{{status[1].name}}</span>
-              <span class="text-yellow-300 pi pi-circle-fill mr-1 ml-2"></span>
+              <span class="text-green-300 pi pi-circle-fill mr-1 ml-2"></span>
               <span>{{status[2].name}}</span>
-              <span class="text-orange-300 pi pi-circle-fill mr-1 ml-2"></span>
+              <span class="text-red-300 pi pi-circle-fill mr-1 ml-2"></span>
               <span>{{status[3].name}}</span>
             </div>
             <span class="p-input-icon-left ml-auto">
@@ -49,8 +49,8 @@
             <td><span pTooltip={{campaign.status}} tooltipPosition="top" [ngClass]="{
                 'text-400': campaign.status === status[0].name,
                 'text-blue-300': campaign.status === status[1].name,
-                'text-yellow-300': campaign.status === status[2].name,
-                'text-orange-300': campaign.status === status[3].name
+                'text-green-300': campaign.status === status[2].name,
+                'text-red-300': campaign.status === status[3].name
             }" class="pi pi-circle-fill ml-2"></span>
             </td>
             <td>{{ campaign.name }}</td>
