--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -160,7 +160,7 @@
                 </div>
               </div>
               <div class="flex justify-content-end mt-3">
-                <p-button label="儲存" (click)="showAlertComfirm()"
+                <p-button label="儲存" (click)="patchLead()"
                           styleClass="p-button-outlined p-button-info"></p-button>
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
               </div>
