--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -159,7 +159,7 @@
               <div class="flex justify-content-end mt-3">
                 <p-button label="儲存" (click)="patchOpportunity(id)"
                           styleClass="p-button-outlined p-button-info"></p-button>
-                <p-button label="取消" styleClass="p-button-secondary ml-1"></p-button>
+                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
               </div>
             </p-tabPanel>
             <p-tabPanel header="活動">
