--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -185,7 +185,7 @@
                     <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
                                 formControlName="status"
                                 optionLabel="name" (onChange)="onStatusChange($event)"
-                                [(ngModel)]="selectedStatusName"></p-dropdown>
+                                [(ngModel)]="selectedStatus"></p-dropdown>
                   </div>
                 </div>
                 <div class="col-6">
