--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -269,7 +269,7 @@
                 </div>
               </div>
               <div class="flex justify-content-end">
-                <p-button label="儲存" (click)="showAlertComfirm()" styleClass="p-button-outlined p-button-info"></p-button>
+                <p-button label="儲存" (click)="patchContractRequest()" styleClass="p-button-outlined p-button-info"></p-button>
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary ml-2"></p-button>
               </div>
             </p-tabPanel>
