--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -1,12 +1,36 @@
 @import 'src/app/app.component.scss';
 :host ::ng-deep  .fc.fc-theme-standard .fc-toolbar .fc-button{
   font-family: "Verdana", sans-serif;
-};
+  background: #104673;
+  border: 0;
+  color: #FFFFFB;
+  cursor: pointer;
+  outline: 0;
+}
+:host ::ng-deep  .fc.fc-theme-standard .fc-toolbar .fc-button:hover{
+  border: 0;
+  background: #104673;
+  color: #FFFFFB;
+}
 ::ng-deep .fc-toolbar-title {
   font-family: "Verdana", sans-serif;
   font-size: 24px;
-  color: #444b5b;
+  color: #104673;
 }
+:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-next-button,
+:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-prev-button {
+  background: 0;
+  color: #104673;
+  border: none;
+}
+:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-next-button:hover,
+:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-prev-button:hover {
+  background-color: #ddd;
+  color: #333;
+  border: none;
+  box-shadow: none;
+}
+
 .reddot {
   height: 10px;
   width: 10px;
