--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -18,11 +18,11 @@
           <div class="grid mt-2">
             <div class="col-12 flex justify-content-center">
               <label>類型: </label>
-              <label>{{selectedTypeName}}</label>
+              <label>{{GetOneCampaign.status}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>狀態: </label>
-              <label>{{selectedStatusName}}</label>
+              <label>{{GetOneCampaign.type}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>開始日期: </label>
@@ -42,37 +42,37 @@
       <p-card>
  <span class="flex justify-content-center">
        <button class="flex justify-content-center" [ngClass]="{
-                'surface-400': selectedStatusName === '策劃中',
-                'bg-blue-300': selectedStatusName === '進行中',
-                'bg-green-300': selectedStatusName === '已完成',
-                'bg-red-300': selectedStatusName === '已中止'
+                'surface-400': stage === '策劃中',
+                'bg-blue-300': stage === '進行中',
+                'bg-green-300': stage === '已完成',
+                'bg-red-300': stage === '已終止'
             }">
-          <span class="span" *ngIf="selectedStatusName==='策劃中'">策劃中</span>
+          <span class="span" *ngIf="stage==='策劃中'">策劃中</span>
           <i class="pi pi-check"
-             *ngIf="selectedStatusName==='進行中'||selectedStatusName==='已完成'||selectedStatusName==='已中止'"></i>
+             *ngIf="stage==='進行中'||stage==='已完成'||stage==='已終止'"></i>
        </button>
         <button class="flex justify-content-center" [ngClass]="{
-                'has-check':selectedStatusName === '策劃中',
-                'bg-blue-300': selectedStatusName === '進行中',
-                'bg-green-300': selectedStatusName === '已完成',
-                'bg-red-300': selectedStatusName === '已中止'
+                'has-check':stage === '策劃中',
+                'bg-blue-300': stage === '進行中',
+                'bg-green-300': stage === '已完成',
+                'bg-red-300': stage === '已終止'
             }">
-          <span class="span" *ngIf="selectedStatusName==='策劃中'||selectedStatusName==='進行中'">進行中</span>
-          <i class="pi pi-check" *ngIf="selectedStatusName==='已完成'||selectedStatusName==='已中止'"></i>
+          <span class="span" *ngIf="stage==='策劃中'||stage==='進行中'">進行中</span>
+          <i class="pi pi-check" *ngIf="stage==='已完成'||stage==='已終止'"></i>
         </button>
         <button class="flex justify-content-center" [ngClass]="{
-                'has-check':selectedStatusName === '策劃中'||selectedStatusName === '進行中',
-                'bg-green-300': selectedStatusName === '已完成',
-                'bg-red-300': selectedStatusName === '已中止'
+                'has-check':stage === '策劃中'||stage === '進行中',
+                'bg-green-300': stage === '已完成',
+                'bg-red-300': stage === '已終止'
             }">
           <span class="span"
-                *ngIf="selectedStatusName==='策劃中'||selectedStatusName==='進行中'||selectedStatusName==='已完成'">已完成</span>
-          <i class="pi pi-check" *ngIf="selectedStatusName==='已中止'"></i>
+                *ngIf="stage==='策劃中'||stage==='進行中'||stage==='已完成'">已完成</span>
+          <i class="pi pi-check" *ngIf="stage==='已終止'"></i>
         </button>
            <button class="flex justify-content-center" [ngClass]="{
-                'has-check': selectedStatusName === '策劃中'||selectedStatusName === '進行中'||selectedStatusName === '已完成',
-                'bg-red-300': selectedStatusName === '已中止'}">
-            <span class="span">已中止</span>
+                'has-check': stage === '策劃中'||stage === '進行中'||stage === '已完成',
+                'bg-red-300': stage === '已終止'}">
+            <span class="span">已終止</span>
         </button>
       </span>
       </p-card>
@@ -174,9 +174,9 @@
                 </div>
                 <div class="col-6">
                   <div class="field">
-                    <label>業務</label>
+                    <label>業務員</label>
                     <br>
-                    <label class="mt-2 ml-2 disable">{{(campaign_form.controls['created_by'].value)}}</label>
+                    <label class="mt-2 ml-2 disable">{{(campaign_form.controls['salesperson_name'].value)}}</label>
                   </div>
                 </div>
                 <div class="col-6">
@@ -184,8 +184,7 @@
                     <label>狀態</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status"
                                 formControlName="status"
-                                optionLabel="name" (onChange)="onStatusChange($event)"
-                                [(ngModel)]="selectedStatus"></p-dropdown>
+                                optionLabel="name" (onChange)="onStatusChange($event)"></p-dropdown>
                   </div>
                 </div>
                 <div class="col-6">
@@ -212,8 +211,7 @@
                     <label>類型</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="type"
                                 formControlName="type"
-                                optionLabel="name" (onChange)="ontypeChange($event)"
-                                [(ngModel)]="selectedType"></p-dropdown>
+                                optionLabel="name" (onChange)="ontypeChange($event)"></p-dropdown>
                   </div>
                 </div>
                 <div class="col-6">
